--- a/templates/household/index.html.twig
+++ b/templates/household/index.html.twig
@@ -3,18 +3,7 @@
 {% block title %}Hello HouseholdController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/htdocs/BOILERPLATE/src/Controller/HouseholdController.php'|file_link(0) }}">src/Controller/HouseholdController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/htdocs/BOILERPLATE/templates/household/index.html.twig'|file_link(0) }}">templates/household/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <div id="root">
+        ROOT
+    </div>
 {% endblock %}
