--- a/assets/js/react/src/styles/index.scss
+++ b/assets/js/react/src/styles/index.scss
@@ -1,3 +1,24 @@
+* {
+  transition: .4s ease-in-out!important;
+}
+
 body {
-  background: red;
+  background: #673ab7;//primary
+  font-family: 'Rajdhani', sans-serif;
+
+  .hover {
+    color: white;
+
+    &.red {
+      &:hover {
+        background: #e94a4a !important; // red
+      }
+    }
+
+    &.green {
+      &:hover {
+        background: #6ce123!important;
+      }
+    }
+  }
 }
