added new template and entry point for household landing. Styles coming

--- a/templates/household/index.html.twig
+++ b/templates/household/index.html.twig
@@ -1,9 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HouseholdController!{% endblock %}
+{% block head %}
+     {% block stylesheets %}
+         {{ encore_entry_link_tags('household') }}
+     {% endblock %}
+
+    {% block javascripts %}
+        {{ encore_entry_script_tags('household') }}
+    {% endblock %}
+    {% block title %}Household{% endblock %}
+{% endblock %}
 
 {% block body %}
-    <div id="root">
-        ROOT
+    <div id="household">
+
     </div>
 {% endblock %}
