--- a/templates/household/index.html.twig
+++ b/templates/household/index.html.twig
@@ -6,13 +6,21 @@
      {% endblock %}
 
     {% block javascripts %}
+        {{ parent() }}
         {{ encore_entry_script_tags('household') }}
+        <script>
+            window.user = {
+                name: '{{ app.user.name }}',
+                email: '{{ app.user.email }}',
+            };
+        </script>
     {% endblock %}
     {% block title %}Household{% endblock %}
 {% endblock %}
 
 {% block body %}
     <div id="household">
+        <noscript class="text-center d-block p-4">{% trans %}You need to enable JavaScript to run this app{% endtrans %}</noscript>
 
     </div>
 {% endblock %}
