set actions, constants and reducers. Updating user. User Menu still not catching user changes

--- a/assets/js/react/src/styles/index.scss
+++ b/assets/js/react/src/styles/index.scss
@@ -3,7 +3,8 @@
 }
 
 body {
-  //potential replacement: #f3f2e2
+  //potential replacement
+  //background: #f3f2e2;
   background: #673ab7;//primary
   font-family: 'Rajdhani', sans-serif;
 
