--- a/templates/household/index.html.twig
+++ b/templates/household/index.html.twig
@@ -19,7 +19,7 @@
 {% endblock %}
 
 {% block body %}
-    <div id="household">
+    <div id="root">
         <noscript class="text-center d-block p-4">{% trans %}You need to enable JavaScript to run this app{% endtrans %}</noscript>
 
     </div>
