--- a/templates/objective/index.html.twig
+++ b/templates/objective/index.html.twig
@@ -1,20 +1,24 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ObjectiveController!{% endblock %}
+{% block head %}
+    {% block stylesheets %}
+        {{ encore_entry_link_tags('login') }}
+    {% endblock %}
+
+    {% block javascripts %}
+        {{ parent() }}
+        {{ encore_entry_script_tags('login') }}
+    {% endblock %}
+    {% block title %}Login{% endblock %}
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    {% if error %}
+        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %}
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <div id="root">
+        <noscript class="text-center d-block p-4">{% trans %}You need to enable JavaScript to run this app{% endtrans %}</noscript>
+    </div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/htdocs/BOILERPLATE/src/Controller/ObjectiveController.php'|file_link(0) }}">src/Controller/ObjectiveController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/htdocs/BOILERPLATE/templates/objective/index.html.twig'|file_link(0) }}">templates/objective/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
