--- a/react_nodejs/client/src/styles/index.scss
+++ b/react_nodejs/client/src/styles/index.scss
@@ -4,8 +4,8 @@
 
 body {
   //potential replacement
-  //background: #f3f2e2;
-  background: #673ab7;//primary
+  background: #f3f2e2;
+  // background: #673ab7;//primary
   font-family: 'Rajdhani', sans-serif;
 
   .hover {
