--- a/react_nodejs/client/src/components/common/forms/styles.scss
+++ b/react_nodejs/client/src/components/common/forms/styles.scss
@@ -18,7 +18,6 @@
       justify-content: space-evenly;
       padding: 10px 0;
 
-
       label {
         padding: 5px 0;
       }
@@ -28,6 +27,6 @@
         padding: 5px;
       }
 
-      .base {}
+      // .base {}
     }
   }
